# npsgate

./: .gitignore  DISABLED_PLUGINS  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  index.html  params.json  plugin_probe.sh
doc/configuration/examples/: README.capture  README.simple
doc/configuration/examples/capture/: capture.config
doc/configuration/examples/capture/plugin_config/: nfqueue.config  pcap_output.config
doc/configuration/examples/capture/plugins/: duplicate.config  ipoutput.config
doc/configuration/examples/simple/: simple.config
doc/configuration/examples/simple/plugin_config/: nfqueue.config
doc/configuration/examples/simple/plugins/: nothing.config
doc/configuration/plugins/: nfqueue_EXAMPLE.config
m4/: boost.m4  crafter.m4  libconfig.m4  netfilter.m4  plugins.m4  vyatta.m4
src/: Makefile.am  jobqueue.cpp  jobqueue.h  logger.cpp  logger.h  message.hpp  npsgate.cpp  npsgate_context.hpp  npsgate_core.cpp  npsgate_core.hpp  npsgatevar.hpp  packet_manager.hpp  plugincore.cpp  plugincore.h  pluginmanager.cpp  pluginmanager.h  priority_queue.hpp  publish_subscribe.cpp  publish_subscribe.h  queue.hpp
src/monitor/: monitor.hpp  monitor_comms.cpp  monitor_log.cpp  monitor_main.cpp  monitor_plugins.cpp  monitor_pubsub.cpp
src/plugins/: PLUGIN_HOWTO  logger.hpp  npsgate_plugin.hpp
src/plugins/DTNBridge/: Makefile.am  Makefile.in  dtn_bridge.cpp  dtn_bridge.h  npsgate_lwip.cpp  npsgate_lwip.h  sys_arch.c
src/plugins/DTNBridge/include/: lwipopts.h
src/plugins/DTNBridge/include/arch/: cc.h
src/plugins/DTNBridge/lwip/src/core/: tcp.c  tcp_out.c
src/plugins/DTNBridge/lwip/src/core/ipv4/: ip4.c
src/plugins/DTNInput/: Makefile.am  Makefile.in
src/plugins/DTNInput/applib/: dtn_types.h
src/plugins/DTNOutput/: Makefile.am  Makefile.in  bpa_interface.hpp  dtn_output.cpp
src/plugins/Duplicate/: Makefile.am  duplicate.cpp
src/plugins/IPOutput/: Makefile.am  Makefile.in  ip_output.cpp
src/plugins/NFQueue/: Makefile.am  Makefile.in  nf_queue.cpp
src/plugins/Nothing/: Makefile.am  Makefile.in  nothing.cpp
src/plugins/PCAPInput/: Makefile.am  Makefile.in  README  pcapinput.cpp
src/plugins/PCAPOutput/: Makefile.am  Makefile.in  pcapoutput.cpp
src/plugins/PortRouter/: Makefile.am  port_router.cpp
src/plugins/Router/: Makefile.am  Makefile.in  router.cpp
src/plugins/SPINDLE_DTN/: Makefile.am  spindle_input.cpp  spindle_output.cpp
src/plugins/SPINDLE_DTN/applib/: dtn_api.h
src/plugins/SplitTCP/: Makefile.am  Makefile.in  npsgate_lwip.cpp  npsgate_lwip.h  split_tcp.cpp  split_tcp.h
src/plugins/SplitTCP/include/: lwipopts.h
src/plugins/SplitTCP/include/arch/: sys_arch.h
src/plugins/SplitTCP/lwip/src/core/: init.c  tcp.c
